--- a/css/creative.css
+++ b/css/creative.css
@@ -55,8 +55,71 @@ h6 {
 .text-faded {
   color: rgba(255, 255, 255, 0.7); }
 
+.modal-body{
+  background-color: #f9f9f9;
+}
+
+.modal-title{
+  font-weight:600;
+}
+
+.links-group{
+    padding-top: 3%;
+}
+
+.project-link{
+  text-align: left;
+}
+
+
+.pic-sub-title{
+  text-align: center;
+  padding-top: 1%;
+  font-style: italic;
+  color: #444444;
+}
+
+.project-link-second{
+  text-align: left;
+  padding-left: 5%;
+}
+
+.screen-shot{
+  padding-top: 2%;
+  width: 100%;
+  border-color: black;
+  -webkit-filter: drop-shadow(5px 5px 5px #222 );
+filter: drop-shadow(5px 5px 5px #222);
+}
+
+.mobile-screen-shot{
+  height: auto;
+  width: auto;
+  max-width: 200px;
+  float: left; margin: 4px 10px 0px 0px;
+  padding-right: 3%;
+}
+
+.mobile-screen-shot-mappy{
+  height: auto;
+  width: auto;
+  max-width: 350px;
+  float: left; margin: 4px 10px 0px 0px;
+  padding-right: 3%;
+}
+
+.mobile-ss-container{
+  margin-left: 5%;
+  margin-right: 4%;
+  padding-top: 3%;
+}
+
 .text-white{
   color: white;
+}
+
+.linkIcon{
+  color: black;
 }
 
 
@@ -255,5 +318,3 @@ header.masthead {
   .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
     color: #f4f4f4;
     background-color: #0b3c5d !important; }
-  /*.btn-primary:active, .btn-primary:focus {
-    box-shadow: 0 0 0 0.2rem rgba(240, 95, 64, 0.5) !important; }*/
