--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
   background-color: #79C7CA;
 }
 
+.text-lite{
+  font-weight:lighter;
+}
+
 
 /*!
  * Start Bootstrap - Creative v4.0.0-beta.2 (https://startbootstrap.com/template-overviews/creative)
@@ -40,11 +44,6 @@ h4,
 h5,
 h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif; }
-
-.text-lite{
-  font-weight:lighter;
-
-}
 
 .bg-primary {
   background-color: #79C7CA !important; }
@@ -87,6 +86,7 @@ h6 {
 .screen-shot{
   padding-top: 2%;
   width: 100%;
+  height: auto;
   border-color: black;
   -webkit-filter: drop-shadow(5px 5px 5px #222 );
 filter: drop-shadow(5px 5px 5px #222);
@@ -96,7 +96,8 @@ filter: drop-shadow(5px 5px 5px #222);
   height: auto;
   width: auto;
   max-width: 200px;
-  float: left; margin: 4px 10px 0px 0px;
+  float: left;
+  margin: 4px 10px 0px 0px;
   padding-right: 3%;
 }
 
