--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,24 @@ h5,
 h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif; }
 
+#services{
+  margin-bottom: -20px;
+}
+
+.hint-text{
+  font-style: italic;
+  font-size: 95%;
+}
+
+.portfolio-heading{
+  padding-top: 50px;
+}
+
+.project-line{
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
 .bg-primary {
   background-color: #79C7CA !important; }
 
