--- a/main.css
+++ b/main.css
@@ -158,12 +158,32 @@ filter: drop-shadow(5px 5px 5px #222);
   padding-right: 3%;
 }
 
+.mobile-screen-shot-epro{
+  height: auto;
+  width: auto;
+  max-width: 225px;
+  float: left;
+  margin: 4px 10px 0px 0px;
+  padding-right: 3%;
+  padding-bottom: 10px;
+}
+
 .mobile-screen-shot-mappy{
   height: auto;
   width: auto;
   max-width: 350px;
   float: left; margin: 4px 10px 0px 0px;
   padding-right: 3%;
+}
+
+.mobile-screen-shot-wireframe{
+  height: auto;
+  width: auto;
+  max-width: 250px;
+  float: left;
+  margin: 4px 10px 0px 0px;
+  padding-right: 3%;
+  padding-bottom: 3%;
 }
 
 .mobile-ss-container{
