--- a/main.css
+++ b/main.css
@@ -152,13 +152,33 @@ filter: drop-shadow(5px 5px 5px #222);
 .mobile-screen-shot{
   height: auto;
   width: auto;
-  max-width: 200px;
+  max-width: 130px;
   float: left;
-  margin: 4px 10px 0px 0px;
-  padding-right: 3%;
+  padding-right: 5%;
+  padding-top: 15px;
+  padding-bottom: 10px;
 }
 
 .mobile-screen-shot-epro{
+  height: auto;
+  width: auto;
+  max-width: 120px;
+  float: left;
+  padding-right: 5%;
+  padding-top: 15px;
+  padding-bottom: 10px;
+}
+
+.mobile-screen-shot-mappy{
+  height: auto;
+  width: auto;
+  max-width: 120px;
+  float: left;
+  padding-right: 5%;
+  padding-top: 5%;
+}
+
+.mobile-screen-shot-wireframe{
   height: auto;
   width: auto;
   max-width: 120px;
@@ -169,28 +189,14 @@ filter: drop-shadow(5px 5px 5px #222);
   padding-bottom: 10px;
 }
 
-.mobile-screen-shot-mappy{
-  height: auto;
-  width: auto;
-  max-width: 350px;
-  float: left; margin: 4px 10px 0px 0px;
-  padding-right: 3%;
-}
-
-.mobile-screen-shot-wireframe{
-  height: auto;
-  width: auto;
-  max-width: 250px;
-  float: left;
-  margin: 4px 10px 0px 0px;
-  padding-right: 3%;
-  padding-bottom: 3%;
-}
-
 .mobile-ss-container{
   margin-left: 5%;
   margin-right: 4%;
   padding-top: 3%;
+}
+
+.resume-text{
+  font-size: 140%;
 }
 
 .text-white{
@@ -326,6 +332,25 @@ header.masthead {
       font-size: 1.15rem; } }
   @media (min-width: 992px) {
 
+    .mobile-screen-shot{
+      height: auto;
+      width: auto;
+      max-width: 200px;
+      float: left;
+      margin: 4px 10px 0px 0px;
+      padding-right: 3%;
+    }
+
+    .mobile-screen-shot-wireframe{
+      height: auto;
+      width: auto;
+      max-width: 250px;
+      float: left;
+      margin: 4px 10px 0px 0px;
+      padding-right: 3%;
+      padding-bottom: 3%;
+    }
+
     .mobile-screen-shot-epro{
       height: auto;
       width: auto;
@@ -334,6 +359,14 @@ header.masthead {
       margin: 4px 10px 0px 0px;
       padding-right: 3%;
       padding-bottom: 10px;
+    }
+
+    .mobile-screen-shot-mappy{
+      height: auto;
+      width: auto;
+      max-width: 350px;
+      float: left; margin: 4px 10px 0px 0px;
+      padding-right: 3%;
     }
 
     .subheading-intro{
@@ -354,6 +387,10 @@ header.masthead {
 
     .skill-title{
       font-size: 150% !important;
+    }
+
+    .resume-text{
+      font-size: 200%;
     }
 
     header.masthead {
