--- a/main.css
+++ b/main.css
@@ -35,16 +35,22 @@ h6 {
   margin-bottom: -20px;
 }
 
+#portfolio{
+  background: #212529;
+}
+
 .bio-paragraph{
   font-family: 'Raleway', sans-serif;
   font-size: 95% !important;
 }
 
 .main-intro{
-  text-shadow: 2px 4px 3px rgba(0,0,0,0.2);
+  text-shadow: 2px 4px 3px rgba(0,0,0,0.4);
 }
 
 .subheading-intro{
+  background: #1b1e21;
+  margin: 0 30%;
   text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
   font-size: 110% !important;
 }
@@ -103,10 +109,7 @@ h6 {
 }
 
 .bg-primary {
-  background-color: #79C7CA !important; }
-
-.bg-dark {
-  background-color: #79C7CA !important; }
+  background-color: #1b1e21 !important; }
 
 .text-faded {
   color: rgba(255, 255, 255, 0.7); }
@@ -228,6 +231,14 @@ section {
   font-family: 'Raleway', sans-serif;
   margin-top: 0;
   font-size: 140%;
+}
+
+#portfolio .section-heading{
+  color: white;
+}
+
+.portfolio-box:hover{
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 ::-moz-selection {
@@ -369,11 +380,6 @@ header.masthead {
       padding-right: 3%;
     }
 
-    .subheading-intro{
-      text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
-      font-size: 125% !important;
-    }
-
     .section-heading {
       font-family: 'Raleway', sans-serif;
       margin-top: 0;
@@ -454,12 +460,12 @@ header.masthead {
 
 
 
-.text-primary {
-  color: #0b3c5d !important; }
+.icon-primary {
+  color: #004085;
+}
 
 .btn {
   font-weight: 700;
-  text-transform: uppercase;
   border: none;
   border-radius: 300px;
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif; }
