--- a/main.css
+++ b/main.css
@@ -3,7 +3,9 @@ html {
   width: 100%;
   height: 100%;
 background-image: url("../img/geometry.png"); }
-
+main{
+  z-index: 1;
+}
 body {
   font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif; }
 
@@ -72,7 +74,10 @@ h6 {
   z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
   cursor: pointer; /* Add a pointer on hover */
 }
-
+#about{
+  z-index: 1;
+  position: relative;
+}
 .subheading-intro{
   background: #1b1e21;
   margin: 0 30%;
@@ -530,8 +535,10 @@ header.masthead {
   padding: 1rem 2rem; }
 
 .btn-primary {
-  background-color: #79c7ca;
-  border-color: #79c7ca; }
+  background-color: #004085;
+  border-color: #004085;
+  cursor: pointer;
+ }
   .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
     color: #f4f4f4;
     background-color: #0b3c5d !important; }
