--- a/main.css
+++ b/main.css
@@ -395,7 +395,7 @@ body {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 56px);
-  background-image: url("./img/header.jpg");
+  background-image: url("./img/profile_image.jpg");
   background-position: center top;
   -webkit-background-size: cover;
   -moz-background-size: cover;
