updated hr color

--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ body {
 hr {
   max-width: 50px;
   border-width: 3px;
-  border-color: #e1a2cc; }
+  border-color: #db5e5e; }
 
 hr.light {
   border-color: #f4f4f4; }
