added more color contrast to footer content

--- a/main.css
+++ b/main.css
@@ -251,7 +251,7 @@ filter: drop-shadow(5px 5px 5px #222);
 
 .copyright{
   font-size: 90%;
-  color: grey;
+  color: #212529;
   text-align: center;
 }
 
