--- a/main.css
+++ b/main.css
@@ -145,13 +145,40 @@ h6 {
   padding: 1.5em;
 }
 
-.project-description{
-  margin: auto 20px;
+.project-container{
+  margin: 0 3em;
 }
 
-.epro-list{
-  text-align: center
+.project-description{
+  color: #fff;
+  margin-left: 2em;
+  width: 40%;
+}
 
+.project-description p{
+  font-family: sans-serif;
+  font-size: 110%;
+}
+
+.project-description h3{
+  line-height: 40px;
+  font-size: 25px;
+}
+
+#mp-btn{
+  cursor: pointer;
+  color: #fff;
+  background-color: #004085;
+  border-color: #012f61;
+}
+
+#mp-btn:hover{
+  color: #004085;
+  background-color: #fff;
+}
+
+.modal-header h3{
+  font-size: 20px;
 }
 
 .portfolio-heading{
@@ -162,11 +189,11 @@ h6 {
   padding-top: 20px;
 }
 
-@media (min-width: 992px){
+/* @media (min-width: 992px){
   #mp_modal{
     max-width: 950px;
   }
-}
+} */
 
 .bg-primary {
   background-color: #1b1e21 !important; }
@@ -294,9 +321,9 @@ body {
   -webkit-tap-highlight-color: #212529;
 }
 
-/* #mountain-project{
-  height: 500px;
-} */
+#mountain-project{
+  padding: 0;
+}
 
 @media (min-width:760px) {
   #mountain-project{
@@ -457,6 +484,7 @@ header.masthead {
   .portfolio-box .portfolio-box-caption {
     position: absolute;
     bottom: 0;
+    left: 0;
     display: block;
     width: 100%;
     height: 100%;
@@ -542,5 +570,15 @@ header.masthead {
   }
   .skill-title{
     font-weight: bold;
+  }
+  .project-description{
+    margin: 2em auto;
+    width: 70%;
+  }
+  .project-description p{
+    font-size: 100%;
+  }
+  #mp_modal{
+    max-width: 950px;
   }
 }
