--- a/main.css
+++ b/main.css
@@ -32,6 +32,16 @@ h5,
 h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif; }
 
+h4{
+  font-size: 1.3rem;
+  font-weight: 600;
+  margin-bottom: .7rem;
+}
+
+#portfolio h3{
+  color: #fff;
+}
+
 @media screen and (prefers-reduced-motion: reduce) {
   * {
     -webkit-transition: none !important;
@@ -79,13 +89,36 @@ h6 {
   position: relative;
 }
 
+#publications{
+  font-weight: 700;
+  margin-bottom: 1em;
+  margin-top: .5em;
+}
+
+#most-recent{
+  font-weight: 700;
+  margin-top: 2.25em;
+  margin-bottom: 1em;
+}
+
+.most-recent-container{
+  padding-top: 1em;
+}
+
 .subheading-intro{
   background: #1b1e21;
   margin: 0 30%;
   text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
   font-size: 1.1rem !important;
 }
-
+.publication-group{
+  flex-direction: column;
+  align-items: center;
+}
+.publication-group a{
+    color: #fff;
+    margin-bottom: 1em;
+}
 .container-center{
   margin: 0 auto;
   text-align: center;
@@ -550,6 +583,7 @@ header.masthead {
   bottom: 0;
   left: 0;
   background: rgba(0, 0, 0, 0.4);
+  height: 100%;
 }
 
 @media (max-width: 991px) {
