--- a/main.css
+++ b/main.css
@@ -33,8 +33,7 @@ h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif; }
 
 h4{
-  font-size: 1.3rem;
-  font-weight: 600;
+  font-size: 1.2rem;
   margin-bottom: .7rem;
 }
 
@@ -105,6 +104,15 @@ h4{
   padding-top: 1em;
 }
 
+@media (max-width: 992px) {
+  .most-recent-container{
+    display: flex;
+    flex-direction: column-reverse;
+    margin: 1em auto 2em auto;
+    padding-top: 0px;
+  }
+}
+
 .subheading-intro{
   background: #1b1e21;
   margin: 0 30%;
@@ -118,6 +126,7 @@ h4{
 .publication-group a{
     color: #fff;
     margin-bottom: 1em;
+    text-align: center;
 }
 .container-center{
   margin: 0 auto;
@@ -165,7 +174,7 @@ h4{
 }
 
 .navbar-light .navbar-toggler{
-  background-color: #fff;
+  background-color: #ddd;
   border: 2px solid;
 }
 .collapse.show{
@@ -555,7 +564,7 @@ header.masthead {
       font-size: 22px; } }
 
 .icon-primary {
-  color: #79c7ca;
+  color: rgba(219, 93, 94, 0.7);
 }
 
 .btn {
@@ -588,7 +597,7 @@ header.masthead {
 
 @media (max-width: 991px) {
   header.masthead{
-    background-position: right top;
+    background-position: top;
   }
   header.masthead h1{
     font-size: 45px !important;
@@ -606,8 +615,8 @@ header.masthead {
     font-weight: bold;
   }
   .project-description{
-    margin: 2em auto;
-    width: 70%;
+    margin: 0em auto 2em auto;
+    width: 90%;
   }
   .project-description p{
     font-size: 100%;
